# shelter_gazebo_src

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: good.pc  pkg_test.pc  shelter_gazebo.pc
devel/share/good/cmake/: goodConfig.cmake
devel/share/pkg_test/cmake/: pkg_testConfig.cmake
devel/share/shelter_gazebo/cmake/: shelter_gazeboConfig.cmake
src/pkg_test/: CMakeLists.txt
src/pkg_test/config/: gripper.yaml
src/pkg_test/launch/: 13-diffdrive.launch  gazebo.launch  rviz.launch  rviz2.launch  sample.launch  test.launch
src/pkg_test/urdf/: sample.urdf  sample2.urdf  sample3.urdf  shelter.gazebo.xacro  shelter.urdf.xacro  turtlebot3.urdf.xacro
src/shelter_gazebo/: CMakeLists.txt  package.xml
src/shelter_gazebo/launch/: shelter_empty.launch  shelter_gazebo_rviz.launch  shelter_house.launch  shelter_world.launch
src/shelter_gazebo/models/shelter/: model-1_4.sdf  model.config  model.sdf
src/shelter_gazebo/models/shelter_common_meshes/: lds.dae  shelter_base.dae
src/shelter_gazebo/models/shelter_house/: model.config  model.sdf
src/shelter_gazebo/models/shelter_world/: model.config
src/shelter_gazebo/rviz/: multi_shelter_slam.rviz
src/shelter_gazebo/worlds/: shelter_house.world  shelter_world.world
