<?xml version="1.0"?>
<package format="2">
  <name>shelter_gazebo</name>
  <version>1.3.2</version>
  <description>
    Gazebo simulation package for the shelter
  </description>
  <license>Apache 2.0</license>
  <author email="candy3465@naver.com">ChoKH</author>
  <maintainer email="candy3465@naver.com">ChoKH</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_gazebo</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
